# salutron

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  pyproject.toml
.github/workflows/: aws-deploy.yml  aws-destrop.yml  azure-deploy.yml  azure-destroy.yml  code-quality.yml  gcp-deploy.yml  gcp-destroy.yml  security.yml
docs/: CNAME  index.html
docs/css/: style.css
static/: style.css
templates/: index.html
terraform/: main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/aws/: main.tf  outputs.tf  prod.tfvars  terraform.tfvars  variables.tf
terraform/aws/scripts/: deploy.sh  destroy.sh
terraform/azure/: main.tf  terraform.tfvars  variables.tf
terraform/azure/scripts/: deploy.sh  destroy.sh  setup.sh
terraform/ci-setup/: aws-backend-setup.tf  github-oidc.tf
terraform/ci-setup/aws/: github-oidc.tf
terraform/ci-setup/azure/: azure-backend-setup.tf  github-workload-identity.tf
terraform/ci-setup/gcp/: gcp-backend-setup.tf  github-workload-identity.tf
terraform/gcp/: main.tf  outputs.tf  prod.tfvars  terraform.tfvars  variables.tf
terraform/gcp/scripts/: deploy.sh  destroy.sh  setup.sh
terraform/scripts/: deploy.sh  destroy.sh
